--- a/assets/bmg_styles.css
+++ b/assets/bmg_styles.css
@@ -133,6 +133,7 @@
     border: none;
     padding-left: 1.5vw;
     border-radius: 4px;
+    height: 2.083vw;
 }
 
 .bmgh_nav_header .bmgh_m_logo_search .bmgh_search_form {
