--- a/assets/bmg_styles.css
+++ b/assets/bmg_styles.css
@@ -111,7 +111,7 @@
 .bmgh_bot_header {
     background: #4C5DC9;
     padding-top: .5vw;
-    padding-bottom: .5vw;
+    padding-bottom: 1vw;
 }
 
 .bmgh_bot_header a {
