--- a/sections/bmg_categories.liquid
+++ b/sections/bmg_categories.liquid
@@ -8,14 +8,16 @@
         <div class="row">
             {% for block in section.blocks %}
                 <div class="col-md-3">
-                    <div class="bmgc_body">
-                        {% if collections[block.settings.featured_collection].featured_image == blank %} 
-                            <img src="{{ block.settings.collection_image | img_url: 'master' }}"> 
-                        {% else %}
-                            <img src="{{ collections[block.settings.featured_collection].featured_image | img_url: 'master'}}"> 
-                        {% endif %}
-                        <h3>{{ collections[block.settings.featured_collection].title }}</h3>
-                    </div>
+                    <a href="{{ collections[block.settings.featured_collection].url }}">
+                        <div class="bmgc_body">
+                            {% if collections[block.settings.featured_collection].featured_image == blank %} 
+                                <img src="{{ block.settings.collection_image | img_url: 'master' }}"> 
+                            {% else %}
+                                <img src="{{ collections[block.settings.featured_collection].featured_image | img_url: 'master'}}"> 
+                            {% endif %}
+                            <h3>{{ collections[block.settings.featured_collection].title }}</h3>
+                        </div>
+                    </a>
                 </div>
             {% endfor %}
         </div>
