--- a/sections/bmg_footer.liquid
+++ b/sections/bmg_footer.liquid
@@ -4,7 +4,7 @@
             <div class="row bmgf_top">
                 <div class="col-md-2">
                     <a href="/">
-                        <img src="{{ section.settings.logo | img_url: 'master'}}">
+                        <img class="logo_footer" src="{{ section.settings.logo | img_url: 'master'}}">
                     </a>
                 </div>
                 <div class="col-md-2">
