--- a/sections/bmg_footer.liquid
+++ b/sections/bmg_footer.liquid
@@ -7,12 +7,12 @@
                         <img class="logo_footer" src="{{ section.settings.logo | img_url: 'master'}}">
                     </a>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 footer_contents">
                     <h3>{{ section.settings.footer_heading_1 }}</h3>
                     <ul>
                         {% for block in section.blocks %}
                             <li>
-                                <a href="{{ block.settings.footer_1_url }}">
+                                <a href="{{ block.settings.footer_1_url }}" {% unless block.settings.footer_1_icon %} class="without_footer_icon" {% endunless %}>
                                     {% if  block.settings.footer_1_icon %}
                                         <img src="{{ block.settings.footer_1_icon | img_url: 'master'}}">
                                     {% endif %}
