--- a/assets/bmg_styles.css
+++ b/assets/bmg_styles.css
@@ -535,10 +535,26 @@ END HOMEPAGE STYLING
     text-align: center;
 }
 
-.bmg_footer .bmgf_top > div img.logo_footer {
+.bmg_footer .bmgf_top>div img.logo_footer {
     max-width: 6.302vw;
+    margin-top: 1.75vw;
 }
 
 .bmg_footer .bmgf_top > div:first-child {
     text-align: center;
+}
+
+.bmg_footer .bmgf_top .footer_content ul li {
+    display: flex;
+    align-items: center;
+    margin-bottom: .40vw;
+}
+
+.bmg_footer .bmgf_top .footer_content ul li a {
+    margin-bottom: 0;
+}
+
+.bmg_footer .bmgf_top .footer_content ul li img {
+    margin-bottom: -0.15vw;
+    margin-right: .25vw;
 }
