--- a/assets/bmg_styles.css
+++ b/assets/bmg_styles.css
@@ -544,6 +544,10 @@ END HOMEPAGE STYLING
     text-align: center;
 }
 
+.bmg_footer .bmgf_top .footer_content ul {
+    margin-bottom: 0;
+}
+
 .bmg_footer .bmgf_top .footer_content ul li {
     display: flex;
     align-items: center;
