--- a/assets/bmg_styles.css
+++ b/assets/bmg_styles.css
@@ -551,14 +551,20 @@ END HOMEPAGE STYLING
 .bmg_footer .bmgf_top .footer_contents ul li {
     display: flex;
     align-items: center;
-    margin-bottom: .40vw;
+    margin-bottom: .4vw;
+    flex-wrap: wrap;
 }
 
 .bmg_footer .bmgf_top .footer_contents ul li a {
     margin-bottom: 0;
+    width: 100%;
 }
 
 .bmg_footer .bmgf_top .footer_contents ul li img {
     margin-bottom: -0.15vw;
     margin-right: .25vw;
+}
+
+.bmg_footer .bmgf_top .footer_contents ul li a.without_footer_icon {
+    padding-left: 1.3vw;
 }
