--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -25,7 +25,7 @@
       <div class="columntitle">
         {% include 'collection-sorting' %}
       </div>
-      <p class="space20" />
+      <p class="space20"></p>
 
       <div class="grid-uniform grid-link__container">
         {% assign grid_item_width = 'wide--one-third medium--one-half small--one-half' %}
