--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -33,8 +33,16 @@
                 {% endif %}
               </ul>
             </div>
-            <div class="columntitle">
+            <div class="bmgmc_sorting_view">
               {% include 'collection-sorting' %}
+              <div class="bmgmc_grid_list">
+                <div id="listView">
+
+                </div>
+                <div id="gridView">
+
+                </div>
+              </div>
             </div>
             <div class="grid-uniform grid-link__container">
               {% assign grid_item_width = 'wide--one-third medium--one-half small--one-half' %}
