--- a/assets/bmg_styles.css
+++ b/assets/bmg_styles.css
@@ -568,3 +568,7 @@ END HOMEPAGE STYLING
 .bmg_footer .bmgf_top .footer_contents ul li a.without_footer_icon {
     padding-left: 1.3vw;
 }
+
+/********************************************************
+COLLECTION STYLING
+********************************************************/
