--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -1,7 +1,7 @@
 {% paginate collection.products by 120 %}
 <div class="bmg_main_collection">
   <div class="bmgmc_breadcrumbs">
-    <div class="">
+    <div class="container">
       <div class="row">
         <div class="col-md-12">
           {% include 'breadcrumb' %}
