--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -12,10 +12,10 @@
   <div class="bmgmc_main_body">
     <div class="container">
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3 bmg_sidebar_filter">
           {% include 'collection-tags' %}
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9 bmg_mainbody">
             <div class="bmgmc_mc_list">
               <ul>
                 {% assign navdata = collection.metafields['Navigation'] %}
