--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -13,7 +13,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 bmg_sidebar_filter">
-          {% include 'collection-tags' %}
+          <div class="bmg_sidebar_filter_body">
+            {% include 'collection-tags' %}
+          </div>
         </div>
         <div class="col-md-9 bmg_mainbody">
             <div class="bmgmc_mc_list">
