--- a/snippets/collection-tags.liquid
+++ b/snippets/collection-tags.liquid
@@ -26,7 +26,9 @@
   {% endif %}
   
   {% assign filters = navdata.sidebar | split: ',' %}
-  
+  <script>
+    console.log( {{ filters }} );
+  </script>
   {% for filter in filters %}
       <p class="space50" />
       
