--- a/snippets/collection-tags.liquid
+++ b/snippets/collection-tags.liquid
@@ -34,6 +34,7 @@
       <div class="columntitle">{{ filter | capitalize }}</div>
       <hr/>
       {% for tag in tags %}
+      {{ tag }}
         {% assign tagmatch = filter | append: '-' %}
         {% if tag contains tagmatch%}
           
