--- a/snippets/collection-tags.liquid
+++ b/snippets/collection-tags.liquid
@@ -41,8 +41,7 @@
           {% elsif strparams contains tag %}
               <!-- DO NOTHING -->
           {% else %}
-            {% assign newstrparams = strparams | append: '+' | append: tag %}
-            {% assign new_url = collection.url | append: newstrparams %}
+            <!-- DO NOTHING -->
           {% endif %}
 
           <div>
