--- a/templates/collection.json.liquid
+++ b/templates/collection.json.liquid
@@ -3,6 +3,7 @@
 {
     "title" : "{{ collection.title}}",
     "description" : "{{ collection.description }}",
+    "totalproducts" : "{{ collection.all_products_count }}",
     "products" : [
         {% for product in collection.products %}
             {
