--- a/templates/collection.json.liquid
+++ b/templates/collection.json.liquid
@@ -8,6 +8,7 @@
             {
                 "title" : "{{ product.title}}"
             }
+            {% unless forloop.last %},{% endunless %}
         {% endfor %}
     ]
 }
