--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -1,4 +1,31 @@
 {% paginate collection.products by 120 %}
+
+<div id="app">
+
+</div>
+
+<script src="https://unpkg.com/vue@next"></script>
+
+<script>
+  const options = {
+    name: "Collection App",
+    data() {
+      return {
+        collection: null
+      }
+    },
+    methods: {
+      grabCollection() {
+        fetch('https://www.bmgind.com/collections/{{ collection.handle }}?view=json').then(response => response.json()).then(data => this.collection = data);
+      }
+    },
+    mounted() {
+      this.grabCollection();
+    }
+  }
+  const CollectionApp = Vue.createApp(options).mount('#app');
+</script>
+
 <div class="bmg_main_collection">
   <div class="bmgmc_breadcrumbs">
     <div class="container">
