--- a/templates/collection.bmgajax.liquid
+++ b/templates/collection.bmgajax.liquid
@@ -1,7 +1,7 @@
 {% layout none %}
 
 <div id="app">
-
+    <h1 v-html="collection.title"></h1>
 </div>
 
 <script src="https://unpkg.com/vue@next"></script>
