--- a/templates/collection.json.liquid
+++ b/templates/collection.json.liquid
@@ -7,7 +7,7 @@
         {% for product in collection.products %}
             {
                 "title" : "{{ product.title}}",
-                "decription" : "{{product.description}}",
+                "decription" : "{{product.description | strip_html}}",
                 "price" : "{{product.price}}"
             }
             {% unless forloop.last %},{% endunless %}
