--- a/templates/collection.json.liquid
+++ b/templates/collection.json.liquid
@@ -8,7 +8,7 @@
             {
                 "title" : "{{ product.title}}",
                 "description" : "{{product.description | strip_html | strip_newlines }}",
-                "price" : "{{product.price}}"
+                "price" : "{{product.price | money}}"
             }
             {% unless forloop.last %},{% endunless %}
         {% endfor %}
