--- a/snippets/collection-tags.liquid
+++ b/snippets/collection-tags.liquid
@@ -35,20 +35,9 @@
       {% for tag in tags %}
         {% assign tagmatch = filter | append: '-' %}
         {% if tag contains tagmatch%}
-          
-          {% if strparams == ''%}
-            {% assign new_url = collection.url | append: '/' | append: tag %}
-          {% elsif strparams contains tag %}
-            {% assign params = strparams | remove: '/' | remove: tag | split: '+'%}
-            {% assign newstrparams = params | reverse | join: '+' %}
-            {% assign new_url = collection.url | append: '/' | append: newstrparams %}
-          {% else %}
-            {% assign newstrparams = strparams | append: '+' | append: tag %}
-            {% assign new_url = collection.url | append: newstrparams %}
-          {% endif %}
 
           <div>
-                <label class="lblfilter" trgt="{{new_url}}">
+                <label class="lblfilter" data-url="{{tag}}">
                   <input type="checkbox" name="{{filter}}" value="{{tag}}" class="chkfilter" {% if strparams contains tag%}checked{%endif%}/>
                   {% if filter contains 'calories' %}
                     {{ tag | replace: tagmatch,'' | replace: '0',' ' | lstrip | replace: ' ','0' }}
