--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -63,7 +63,7 @@
                 }
                 const CollectionApp = Vue.createApp(options).mount('#app');
 
-                var filter = document.querySelector(".lblfilter");;
+                var filter = document.querySelector(".bmgfilter");;
                   for(var z = 0; z < anchors.length; z++) {
                       var elem = anchors[z];   
                       elem.onclick = function() {
