--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -63,7 +63,7 @@
                 }
                 const CollectionApp = Vue.createApp(options).mount('#app');
 
-                var filter = document.querySelector(".bmgfilter");
+                var filter = document.querySelectorAll(".bmgfilter");
                   for(var z = 0; z < filter.length; z++) {
                       var elem = filter[z];   
                       elem.onclick = function() {
