--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -64,13 +64,18 @@
                 const CollectionApp = Vue.createApp(options).mount('#app');
 
                 var filter = document.querySelectorAll(".bmgfilter");
-                  for(var z = 0; z < filter.length; z++) {
-                      var elem = filter[z];   
-                      elem.onclick = function() {
-                          alert("hello");
-                          return false;
-                      };
-                  }
+
+                for(var z = 0; z < filter.length; z++) {
+
+                    var elem = filter[z];   
+
+                    elem.onclick = function() {
+                        var dataUrl = elem.getAttribute(data-url);
+                        alert("hello " + dataUrl );
+                        return false;
+                    };
+
+                }
 
               </script>
             </div>
