--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -89,7 +89,7 @@
                           }
                         }
 
-                        const CollectionAjax = Vue.createApp(ajaxOptions).mount('#app');
+                        const CollectionApp = Vue.createApp(ajaxOptions).mount('#app');
                         
                         return false;
                     };
